moved hamburger menu to left side for UI, fixed z-index on modals

--- a/src/styles/_hamburgerMenu.scss
+++ b/src/styles/_hamburgerMenu.scss
@@ -4,11 +4,11 @@
 
 .menu-wrap {
   position: fixed;
-  margin-top: 30px;
-  margin-right: 30px;
+  margin-top: 40px;
+  margin-left: 100px;
   top: 0;
-  right: 0;
-  z-index: 2200;
+  left: 0;
+  z-index: 11000;
   visibility: visible;
 }
 
