--- a/src/styles/_userListModal.scss
+++ b/src/styles/_userListModal.scss
@@ -12,12 +12,12 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9000;
+  z-index: 93000;
   width: 100vw;
   height: 90vh;
   background: transparent;
   transition: all 0.4s ease;
-  
+
   h2 {
   color: $secondaryColor;
   padding-top: 5px;
